--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "prepare": "husky install",
     "lint": "eslint --ignore-path .gitignore . --ext .js,.ts",
     "lint:fix": "npm run lint -- --fix",
+    "playground": "nodemon -e ts -w ./src -w ./playground  -x ts-node-dev playground",
     "build": "npm run build:clean && npm run build:tsc",
     "build:clean": "rimraf dist; exit 0",
     "build:tsc": "tsc -p tsconfig.prod.json"
@@ -44,9 +45,11 @@
     "husky": "^7.0.4",
     "jest": "^27.4.5",
     "lint-staged": "^12.1.2",
+    "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
     "ts-jest": "^27.1.2",
+    "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.4"
   },
   "lint-staged": {
