--- a/tsconfig.prod.json
+++ b/tsconfig.prod.json
@@ -3,5 +3,5 @@
   "compilerOptions": {
     "baseUrl": ".",
   },
-  "exclude": ["node_modules", "tests"]
+  "exclude": ["node_modules", "tests", "playground"]
 }
