feat: remove nodemon and just use ts-node-dev

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "prepare": "husky install",
     "lint": "eslint --ignore-path .gitignore . --ext .js,.ts",
     "lint:fix": "npm run lint -- --fix",
-    "playground": "nodemon -e ts -w ./src -w ./playground  -x ts-node-dev playground",
+    "playground": "ts-node-dev --respawn playground",
     "build": "npm run build:clean && npm run build:tsc",
     "build:clean": "rimraf dist; exit 0",
     "build:tsc": "tsc -p tsconfig.prod.json"
@@ -45,7 +45,6 @@
     "husky": "^7.0.4",
     "jest": "^27.4.5",
     "lint-staged": "^12.1.2",
-    "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
     "ts-jest": "^27.1.2",
