--- a/package.json
+++ b/package.json
@@ -1,19 +1,14 @@
 {
   "name": "typescript-library-skeleton",
-  "version": "1.0.0",
-  "description": "Skeleton for new typescript libraries",
-  "main": "src/index.js",
-  "scripts": {
-    "test": "npm run test:unit",
-    "test:unit": "NODE_ENV=test jest --coverage",
-    "prepare": "husky install",
-    "lint": "eslint --ignore-path .gitignore . --ext .js,.ts",
-    "lint:fix": "npm run lint -- --fix",
-    "playground": "ts-node-dev --respawn playground",
-    "build": "npm run build:clean && npm run build:tsc",
-    "build:clean": "rimraf dist; exit 0",
-    "build:tsc": "tsc -p tsconfig.prod.json"
+  "version": "0.1.0",
+  "description": "Template for new typescript libraries",
+  "main": "dist/index.js",
+  "author": "alberthernandezdev@gmail.com",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/AlbertHernandez/typescript-library-skeleton/issues"
   },
+  "homepage": "https://github.com/AlbertHernandez/typescript-library-skeleton#readme",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/AlbertHernandez/typescript-library-skeleton.git"
@@ -21,40 +16,46 @@
   "keywords": [
     "typescript",
     "library",
-    "skeleton"
+    "template"
   ],
-  "author": "alberthernandezdev@gmail.com",
-  "license": "MIT",
   "engines": {
     "node": ">=18.0.0",
-    "npm": ">=9.3.0"
+    "npm": ">=8.0.0"
   },
-  "bugs": {
-    "url": "https://github.com/AlbertHernandez/typescript-library-skeleton/issues"
+  "scripts": {
+    "dev": "tsnd --inspect=9229 --respawn playground",
+    "prepublishOnly": "npm ci && npm run build",
+    "build": "npm run validate-typescript && npm run build:clean && npm run generate-dist",
+    "test": "rimraf coverage && jest",
+    "lint": "eslint --ignore-path .gitignore . --ext .js,.ts",
+    "lint:fix": "npm run lint -- --fix",
+    "validate-typescript": "tsc -p tsconfig.prod.json --noEmit",
+    "generate-dist": "swc ./src -d dist",
+    "build:clean": "rimraf dist; exit 0",
+    "prepare": "husky install"
   },
-  "homepage": "https://github.com/AlbertHernandez/typescript-library-skeleton#readme",
   "devDependencies": {
-    "@commitlint/cli": "^17.4.2",
-    "@commitlint/config-conventional": "^17.4.2",
-    "@types/jest": "^29.2.5",
-    "@typescript-eslint/eslint-plugin": "^5.48.1",
-    "@typescript-eslint/parser": "^5.48.1",
-    "eslint": "^8.31.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-simple-import-sort": "^8.0.0",
+    "@commitlint/cli": "^18.2.0",
+    "@commitlint/config-conventional": "^18.1.0",
+    "@swc/cli": "^0.1.63",
+    "@swc/core": "^1.3.102",
+    "@swc/jest": "^0.2.29",
+    "@types/jest": "^29.5.7",
+    "@typescript-eslint/eslint-plugin": "^6.9.1",
+    "@typescript-eslint/parser": "^6.9.1",
+    "eslint": "^8.53.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "husky": "^8.0.3",
-    "jest": "^29.3.1",
-    "lint-staged": "^13.1.0",
-    "prettier": "^2.8.3",
-    "rimraf": "^4.0.4",
-    "ts-jest": "^29.0.5",
+    "jest": "^29.7.0",
+    "lint-staged": "^15.0.2",
+    "prettier": "^3.0.3",
+    "rimraf": "^5.0.5",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.9.4"
+    "typescript": "^5.2.2"
   },
-  "lint-staged": {
-    "*.(js|ts)": [
-      "npm run lint:fix"
-    ]
-  }
+  "files": [
+    "dist"
+  ]
 }
