ci: add emojis in steps

--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -11,16 +11,17 @@ jobs:
         node-version: [18.x, 20.x]
 
     steps:
-      - uses: actions/checkout@v4
-      - name: Setup Node ${{ matrix.node-version }}
+      - name: 🛬 Checkout
+        uses: actions/checkout@v4
+      - name: ⚙️ Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-      - name: Install dependencies
+      - name: 📥 Install dependencies
         run: npm ci
       - name: Build typescript
         run: npm run build
-      - name: Lint code
+      - name: 💅 Lint code
         run: npm run lint
-      - name: Tests
+      - name: ✅ Run tests
         run: npm run test
