--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -19,7 +19,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: 📥 Install dependencies
         run: npm ci
-      - name: Build typescript
+      - name: 📦 Build typescript
         run: npm run build
       - name: 💅 Lint code
         run: npm run lint
