--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - name: Install dependencies 📥
-        run: bahmutov/npm-install@v1
+        uses: bahmutov/npm-install@v1
       - name: Build typescript 📦
         run: npm run build
       - name: Lint code 💅
