ci: just show if there is PR

--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -29,7 +29,8 @@ jobs:
       - name: Find current PR 🔎
         uses: jwalton/gh-find-current-pr@v1
         id: findPr
-      - name: Show coverage report 📊
+      - name: Show coverage report in the PR 📊
+        if: steps.findPr.outputs.number
         uses: ArtiomTr/jest-coverage-report-action@v2
         with:
           prnumber: ${{ steps.findPr.outputs.number }}
