--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -24,8 +24,8 @@ jobs:
         run: npm run build
       - name: Lint code 💅
         run: npm run lint
-#      - name: Run tests ✅
-#        run: npm run test
+      - name: Run tests ✅
+        run: npm run test
       - name: Find current PR 🔎
         uses: jwalton/gh-find-current-pr@v1
         id: findPr
@@ -34,3 +34,7 @@ jobs:
         uses: ArtiomTr/jest-coverage-report-action@v2
         with:
           prnumber: ${{ steps.findPr.outputs.number }}
+      - uses: andresz1/size-limit-action@v1
+        if: steps.findPr.outputs.number
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
