--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "lint-staged": "^15.0.2",
     "prettier": "^3.0.3",
     "rimraf": "^5.0.5",
+    "size-limit": "^11.0.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
   },
