ci: fix release please setup node

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -21,10 +21,11 @@ jobs:
       - name: Checkout 🛬
         uses: actions/checkout@v4
         if: ${{ steps.release.outputs.release_created }}
-      - uses: Setup Node ⚙️
+      - name: Setup Node ⚙️
         if: ${{ steps.release.outputs.release_created }}
+        uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version-file: '.nvmrc'
           registry-url: 'https://registry.npmjs.org'
       - name: Install dependencies 📥
         if: ${{ steps.release.outputs.release_created }}
