--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -23,7 +23,7 @@ jobs:
         id: cache-node-modules
         with:
           path: 'node_modules'
-          key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
+          key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}-node-${{ matrix.node-version }}
       - name: Install dependencies 📥
         if: steps.cache-node-modules.outputs.cache-hit != 'true'
         run: npm ci
