--- a/.github/workflows/package-size.yml
+++ b/.github/workflows/package-size.yml
@@ -37,6 +37,7 @@ jobs:
           fi
           echo "$package_size" > base-package-size.txt
           echo "package_size=$package_size" >> $GITHUB_OUTPUT
+          echo "Package size: $package_size"
   calculate-head:
     runs-on: ubuntu-latest
     outputs:
@@ -50,6 +51,7 @@ jobs:
         run:  |
           package_size=$(npm publish --dry-run 2>&1 | grep "unpacked size" | awk '{print $5 $6}')
           echo "package_size=$package_size" >> $GITHUB_OUTPUT
+          echo "Package size: $package_size"
   write-comment:
     runs-on: ubuntu-latest
     needs: [calculate-base, calculate-head]
