--- a/.github/workflows/package-size.yml
+++ b/.github/workflows/package-size.yml
@@ -20,6 +20,19 @@ jobs:
         run: |
           short=$(git rev-parse --short HEAD)
           echo "short=$short" >> $GITHUB_OUTPUT
+      - name: Setup Node ⚙️
+        uses: actions/setup-node@v4
+        with:
+          node-version-file: '.nvmrc'
+      - name: Cache Dependencies ⌛️
+        uses: 'actions/cache@v3'
+        id: cache-node-modules
+        with:
+          path: 'node_modules'
+          key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
+      - name: Install dependencies 📥
+        if: steps.cache-node-modules.outputs.cache-hit != 'true'
+        run: npm ci
       - name: 📦 Cache package size for commit ${{ steps.commit.outputs.short }}
         uses: actions/cache@v3
         with:
@@ -29,7 +42,6 @@ jobs:
         id: package-base
         run:  |
           echo "Package size not available in the cache"
-          npm ci
           package_size=$(npm publish --dry-run 2>&1 | grep "unpacked size" | awk '{print $5 $6}')
           echo "$package_size" > base-package-size.txt
           echo "package_size=$package_size" >> $GITHUB_OUTPUT
@@ -42,10 +54,22 @@ jobs:
       - uses: actions/checkout@v4
         with:
           ref: ${{ github.head_ref }}
+      - name: Setup Node ⚙️
+        uses: actions/setup-node@v4
+        with:
+          node-version-file: '.nvmrc'
+      - name: Cache Dependencies ⌛️
+        uses: 'actions/cache@v3'
+        id: cache-node-modules
+        with:
+          path: 'node_modules'
+          key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
+      - name: Install dependencies 📥
+        if: steps.cache-node-modules.outputs.cache-hit != 'true'
+        run: npm ci
       - name: 🎁 Calculate package size in ${{ github.head_ref }}
         id: package-head
         run:  |
-          npm ci
           package_size=$(npm publish --dry-run 2>&1 | grep "unpacked size" | awk '{print $5 $6}')
           echo "package_size=$package_size" >> $GITHUB_OUTPUT
           echo "Package size: $package_size"
