--- a/.github/workflows/package-size.yml
+++ b/.github/workflows/package-size.yml
@@ -1,4 +1,5 @@
-name: Package size
+---
+name: 'Package size'
 
 on:
   pull_request:
@@ -40,7 +41,7 @@ jobs:
           key: base-package-size-os-${{ runner.os }}-commit-${{ steps.commit.outputs.short }}
       - name: 🎁 Calculate package size in ${{ github.base_ref }}
         id: package-base
-        run:  |
+        run: |
           if [ -f base-package-size.txt ]; then
             echo "Getting package size from cache"
             package_size=$(<base-package-size.txt)
@@ -74,7 +75,7 @@ jobs:
         run: npm ci
       - name: 🎁 Calculate package size in ${{ github.head_ref }}
         id: package-head
-        run:  |
+        run: |
           package_size=$(npm publish --dry-run 2>&1 | grep "unpacked size" | awk '{print $5 $6}')
           echo "package_size=$package_size" >> "$GITHUB_OUTPUT"
           echo "Package size: $package_size"
