chore: add ts-paths

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,10 @@
     "strict": true,
     "outDir": "dist",
     "sourceMap": true,
-    "inlineSources": true
+    "inlineSources": true,
+    "paths": {
+      "@src/*": ["src/*"],
+    },
   },
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist"],
 }
