--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "npm": ">=8.0.0"
   },
   "scripts": {
-    "dev": "tsnd --inspect=9229 --respawn playground",
+    "dev": "tsnd -r tsconfig-paths/register --inspect=9229 --respawn playground",
     "prepublishOnly": "npm i && npm run build",
     "build": "npm run validate-typescript && npm run build:clean && npm run generate-dist",
     "test": "rimraf coverage && jest",
@@ -52,7 +52,9 @@
     "lint-staged": "^15.0.2",
     "prettier": "^3.2.4",
     "rimraf": "^5.0.5",
+    "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.2.2"
   },
   "files": [
