--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,9 +8,10 @@
     "outDir": "dist",
     "sourceMap": true,
     "inlineSources": true,
+    "resolveJsonModule": true,
     "paths": {
-      "@src/*": ["src/*"],
-    },
+      "@src/*": ["src/*"]
+    }
   },
-  "exclude": ["node_modules", "dist"],
+  "exclude": ["node_modules", "dist"]
 }
