--- a/.swcrc
+++ b/.swcrc
@@ -9,11 +9,11 @@
     },
     "baseUrl": "./",
     "paths": {
-      "@src/*": ["src/*"],
+      "@src/*": ["src/*"]
     }
   },
   "module": {
     "type": "commonjs"
-  }
+  },
   "minify": false
 }
