--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@swc/cli": "^0.1.63",
     "@swc/core": "^1.3.104",
     "@swc/jest": "^0.2.30",
+    "@types/fs-extra": "^11.0.4",
     "@types/jest": "^29.5.7",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
@@ -47,12 +48,12 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-simple-import-sort": "^10.0.0",
+    "fs-extra": "^11.2.0",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "lint-staged": "^15.0.2",
     "prettier": "^3.2.4",
     "rimraf": "^5.0.5",
-    "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.2.2"
