--- a/.eslintrc
+++ b/.eslintrc
@@ -46,7 +46,8 @@
       "plugins": ["jest"],
       "rules": {
         "@typescript-eslint/unbound-method": "off",
-        "jest/unbound-method": "error"
+        "jest/unbound-method": "error",
+        "jest/expect-expect": "off"
       }
     }
   ],
