style: add no console for src rule

--- a/.eslintrc
+++ b/.eslintrc
@@ -42,6 +42,12 @@
       }
     },
     {
+      "files": ["src/**"],
+      "rules": {
+        "no-console": "warn"
+      }
+    },
+    {
       "files": ["tests/**"],
       "plugins": ["jest"],
       "rules": {
