style: disable no console for scripts

--- a/.eslintrc
+++ b/.eslintrc
@@ -20,7 +20,8 @@
     "simple-import-sort/exports": "error",
     "unicorn/prefer-module": "off",
     "unicorn/prefer-top-level-await": "off",
-    "unicorn/prevent-abbreviations": "off"
+    "unicorn/prevent-abbreviations": "off",
+    "no-console": "warn"
   },
   "overrides": [
     {
@@ -46,9 +47,9 @@
       }
     },
     {
-      "files": ["src/**"],
+      "files": ["playground/**"],
       "rules": {
-        "no-console": "warn"
+        "no-console": "off"
       }
     },
     {
