build: increase target to es2022

--- a/.swcrc
+++ b/.swcrc
@@ -10,7 +10,8 @@
     "baseUrl": "./",
     "paths": {
       "@src/*": ["src/*"]
-    }
+    },
+    "target": "es2022"
   },
   "module": {
     "type": "commonjs"
