--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "module": "commonjs",
-    "target": "ES2021",
+    "target": "ES2022",
     "esModuleInterop": true,
     "strict": true,
     "outDir": "dist",
@@ -10,8 +10,8 @@
     "inlineSources": true,
     "resolveJsonModule": true,
     "paths": {
-      "@src/*": ["src/*"]
-    }
+      "@src/*": ["src/*"],
+    },
   },
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist"],
 }
