--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "validate-typescript": "tsc -p tsconfig.prod.json --noEmit",
     "generate-dist": "swc ./src -d dist",
     "build:clean": "rimraf dist; exit 0",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.6.0",
@@ -52,7 +52,7 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unicorn": "^50.0.1",
     "fs-extra": "^11.2.0",
-    "husky": "^8.0.3",
+    "husky": "^9.0.5",
     "jest": "^29.7.0",
     "lint-staged": "^15.0.2",
     "prettier": "^3.2.4",
