refactor: format tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,8 @@
     "skipLibCheck": true,
     "resolveJsonModule": true,
     "paths": {
-      "@src/*": ["src/*"],
-    },
+      "@src/*": ["src/*"]
+    }
   },
   "exclude": ["node_modules", "dist"],
 }
