--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "lint-staged": "^15.0.2",
     "prettier": "^3.2.4",
     "rimraf": "^5.0.5",
+    "ts-jest": "^29.1.2",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.2.2"
