--- a/package.json
+++ b/package.json
@@ -30,14 +30,14 @@
     "lint": "eslint --ignore-path .gitignore . --ext .js,.ts",
     "lint:fix": "npm run lint -- --fix",
     "validate-typescript": "tsc -p tsconfig.prod.json --noEmit",
-    "generate-dist": "swc ./src -d dist",
+    "generate-dist": "swc ./src -d dist --strip-leading-paths",
     "build:clean": "rimraf dist; exit 0",
     "prepare": "husky"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.6.0",
     "@commitlint/config-conventional": "^18.6.0",
-    "@swc/cli": "^0.1.65",
+    "@swc/cli": "^0.3.9",
     "@swc/core": "^1.4.0",
     "@swc/jest": "^0.2.34",
     "@types/fs-extra": "^11.0.4",
