ci(github): add more options github settings

--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -1,6 +1,27 @@
+---
 repository:
   name: typescript-library-template
   description: Template for new libraries based on Typescript with the Best Practices and Ready for Production
   homepage: github.com/AlbertHernandez/typescript-library-template
   topics: nodejs, template, typescript, nodejs library template
-  has_wiki: true
+  has_wiki: false
+  private: false
+  has_issues: true
+  has_projects: false
+  default_branch: main
+  allow_squash_merge: true
+  allow_merge_commit: false
+  allow_rebase_merge: false
+  delete_branch_on_merge: true
+  enable_automated_security_fixes: true
+  enable_vulnerability_alerts: true
+branches:
+  - name: main
+    protection:
+      required_pull_request_reviews:
+        required_approving_review_count: 1
+        dismiss_stale_reviews: true
+        require_code_owner_reviews: true
+      required_status_checks:
+        strict: true
+      enforce_admins: false
