--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -3,7 +3,7 @@ repository:
   name: typescript-library-template
   description: Template for new libraries based on Typescript with the Best Practices and Ready for Production
   homepage: github.com/AlbertHernandez/typescript-library-template
-  topics: nodejs, template, typescript, nodejs library template
+  topics: nodejs, template, typescript, nodejs library template, typescript library
   has_wiki: false
   private: false
   has_issues: true
@@ -19,7 +19,7 @@ branches:
   - name: main
     protection:
       required_pull_request_reviews:
-        required_approving_review_count: 1
+        required_approving_review_count: 2
         dismiss_stale_reviews: true
         require_code_owner_reviews: true
       required_status_checks:
