--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -1,33 +1,8 @@
----
+# See https://github.com/probot/settings for all available settings.
+
+# General Repository Configuration
 repository:
   name: typescript-library-template
   description: Template for new libraries based on Typescript with the Best Practices and Ready for Production
   homepage: github.com/AlbertHernandez/typescript-library-template
   topics: nodejs, template, typescript, nodejs library template, typescript library
-  has_wiki: false
-  private: false
-  has_issues: true
-  has_projects: false
-  default_branch: main
-  allow_squash_merge: true
-  allow_merge_commit: false
-  allow_rebase_merge: false
-  delete_branch_on_merge: true
-  enable_automated_security_fixes: true
-  enable_vulnerability_alerts: true
-branches:
-  - name: main
-    protection:
-      required_pull_request_reviews:
-        required_approving_review_count: 2
-        dismiss_stale_reviews: true
-        require_code_owner_reviews: true
-      required_status_checks:
-        strict: true
-        contexts: []
-      enforce_admins: false
-      required_linear_history: true
-      restrictions:
-        apps: []
-        users: []
-        teams: []
