ci(github): add more topics

--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -2,4 +2,4 @@ repository:
   name: typescript-library-template
   description: Template for new libraries based on Typescript with the Best Practices and Ready for Production
   homepage: github.com/AlbertHernandez/typescript-library-template
-  topics: nodejs, template, typescript
+  topics: nodejs, template, typescript, nodejs library template, typescript library
