--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -31,3 +31,18 @@ branches:
         apps: []
         users: []
         teams: []
+  - name: master
+    protection:
+      required_pull_request_reviews:
+        required_approving_review_count: 2
+        dismiss_stale_reviews: true
+        require_code_owner_reviews: true
+      required_status_checks:
+        strict: true
+        contexts: []
+      enforce_admins: false
+      required_linear_history: true
+      restrictions:
+        apps: []
+        users: []
+        teams: []
