ci(github): add branch name in quotes

--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -17,7 +17,7 @@ repository:
   enable_vulnerability_alerts: true
 
 branches:
-  - name: main
+  - name: 'main'
     protection:
       required_pull_request_reviews:
         required_approving_review_count: 1
