chore: move unit tests under tests/unit folder

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "dev": "tsnd -r tsconfig-paths/register --inspect=9229 --respawn playground",
     "prepublishOnly": "npm i && npm run build",
     "build": "npm run validate-typescript && npm run build:clean && npm run generate-dist",
-    "test": "rimraf coverage && jest",
+    "test": "rimraf coverage && npm run test:unit",
+    "test:unit": "jest tests/unit --coverageDirectory coverage/unit",
     "lint": "eslint --ignore-path .gitignore . --ext .js,.ts",
     "lint:fix": "npm run lint -- --fix",
     "validate-typescript": "tsc -p tsconfig.prod.json --noEmit",
