--- a/.eslintrc
+++ b/.eslintrc
@@ -56,18 +56,13 @@
       }
     },
     {
-      "files": ["playground/**"],
-      "rules": {
-        "no-console": "off"
-      }
-    },
-    {
       "files": ["tests/**"],
       "plugins": ["jest"],
       "rules": {
         "@typescript-eslint/unbound-method": "off",
         "jest/unbound-method": "error",
-        "jest/expect-expect": "off"
+        "jest/expect-expect": "off",
+        "jest/no-standalone-expect": "off"
       }
     }
   ],
