--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,8 +1,14 @@
 {
+  "release-type": "node",
   "include-component-in-tag": false,
+  "plugins": [
+    {
+      "type": "node-workspace"
+    }
+  ],
   "packages": {
     ".": {
-      "release-type": "node"
+      "package-name": "typescript-library-template"
     }
   },
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
