--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -16,20 +16,10 @@ jobs:
     steps:
       - name: Checkout 🛬
         uses: actions/checkout@v4
-      - name: Cache Dependencies ⌛️
-        uses: actions/cache@v4
-        id: cache-node-modules
-        with:
-          path: 'node_modules'
-          key: ${{ runner.os }}-node_modules-${{ hashFiles('package*.json') }}-${{ hashFiles('.github/workflows/node.yml') }}-node-${{ matrix.node-version }}
       - name: Setup Node ⚙️
-        uses: actions/setup-node@v4
+        uses: ./.github/actions/setup-node
         with:
-          node-version: ${{ matrix.node-version }}
-          cache: npm
-      - name: Install dependencies 📥
-        if: steps.cache-node-modules.outputs.cache-hit != 'true'
-        run: npm ci
+          version: ${{ matrix.node-version }}
       - name: Build typescript 📦
         run: npm run build && find dist/index.js
       - name: Lint code 💅
