fix: separate in two jobs the release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,8 +7,10 @@ on:
       - main
 
 jobs:
-  release:
+  update-library-version:
     runs-on: ubuntu-latest
+    outputs:
+      tag: ${{ steps.changelog.outputs.tag }}
     permissions:
       contents: write
     steps:
@@ -19,10 +21,17 @@ jobs:
       - name: Create changelog 📝
         id: changelog
         uses: TriPSs/conventional-changelog-action@v5
+
+  release:
+    needs: update-library-version
+    if: ${{ needs.update-library-version.outputs.tag }}
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
       - name: Create major and minor tags 📍
-        if: steps.changelog.outputs.tag
         run: |
-          TAG=${{ steps.changelog.outputs.tag }}
+          TAG=${{ needs.update-library-version.outputs.tag }}
           major=${TAG%%.*}
           minor=${TAG%.*}
 
@@ -38,10 +47,8 @@ jobs:
           git push -f origin $major
           git push -f origin $minor
       - name: Setup Node ⚙️
-        if: steps.changelog.outputs.tag
         uses: ./.github/actions/setup-node
         with:
           npm_token: ${{ secrets.NPM_TOKEN }}
       - name: Publish to NPM 🚀
-        if: steps.changelog.outputs.tag
         run: npm publish
