--- a/.github/workflows/handle-create-rc-command.yml
+++ b/.github/workflows/handle-create-rc-command.yml
@@ -13,6 +13,10 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: ${{ github.event.client_payload.pull_request.head.ref }}
+      - name: Setup Node ⚙️
+        uses: ./.github/actions/setup-node
+        with:
+          npm_token: ${{ secrets.NPM_TOKEN }}
       - name: Mark command as done ✅
         uses: peter-evans/create-or-update-comment@v4
         with:
