--- a/.github/workflows/handle-create-rc-command.yml
+++ b/.github/workflows/handle-create-rc-command.yml
@@ -6,8 +6,25 @@ on:
     types: [create-rc-command]
 
 jobs:
-  generate-dist:
+  update-library-version:
     runs-on: ubuntu-latest
+    outputs:
+      tag: ${{ steps.changelog.outputs.tag }}
+    steps:
+      - name: Checkout 🛬
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.client_payload.pull_request.head.ref }}
+      - name: Create changelog 📝
+        id: changelog
+        uses: TriPSs/conventional-changelog-action@v5
+        with:
+          github-token: ${{ secrets.github_token }}
+
+  release-rc:
+    runs-on: ubuntu-latest
+    needs: update-library-version
+    if: ${{ needs.update-library-version.outputs.tag }}
     steps:
       - name: Checkout 🛬
         uses: actions/checkout@v4
@@ -21,8 +38,18 @@ jobs:
         with:
           token: ${{ secrets.NPM_TOKEN }}
           tag: ${{ github.event.client_payload.pull_request.head.ref }}
+          dry-run: true
       - name: Mark command as done ✅
         uses: peter-evans/create-or-update-comment@v4
         with:
+          repository: ${{ github.event.client_payload.github.payload.repository.full_name }}
           comment-id: ${{ github.event.client_payload.github.payload.comment.id }}
+          body: |
+            ## 🐣 The new release candidate is ready to be used
+
+            Clients can use it by running:
+
+            ```bash
+            npm install --save typescript-library-template-example@${{ github.event.client_payload.pull_request.head.ref }}
+            ```
           reactions: hooray
