--- a/.github/workflows/handle-create-rc-command.yml
+++ b/.github/workflows/handle-create-rc-command.yml
@@ -20,6 +20,10 @@ jobs:
         uses: TriPSs/conventional-changelog-action@v5
         with:
           github-token: ${{ secrets.github_token }}
+          output-file: "false"
+          tag-prefix: "rc"
+          pre-release-identifier: "rc"
+          pre-release: true
 
   release-rc:
     runs-on: ubuntu-latest
