--- a/.github/workflows/handle-create-rc-command.yml
+++ b/.github/workflows/handle-create-rc-command.yml
@@ -8,22 +8,15 @@ on:
 jobs:
   update-library-version:
     runs-on: ubuntu-latest
-    outputs:
-      tag: ${{ steps.changelog.outputs.tag }}
     steps:
       - name: Checkout 🛬
         uses: actions/checkout@v4
         with:
           ref: ${{ github.event.client_payload.pull_request.head.ref }}
-      - name: Log
-        env:
-          PAYLOAD_CONTEXT: ${{ toJson(github.event.client_payload) }}
-          PULL_REQUEST: ${{ toJson(github.event.client_payload.pull_request) }}
+      - name: Log details
         run: |
-          echo "HEAD: ${{ github.event.client_payload.pull_request.head.ref }}"
-          echo "SHA: ${{ github.event.client_payload.pull_request.head.sha }}"
-          echo "PR: $PULL_REQUEST"
-          echo "Client payload: $PAYLOAD_CONTEXT"
+          echo "Commit SHA: ${{ github.event.client_payload.pull_request.head.sha }}"
+
 
 #  release-rc:
 #    runs-on: ubuntu-latest
